# cpgl

./: CMakeLists.txt  README  configuration.yaml  main.cpp
elements/: CMakeLists.txt
elements/camera/: camera.cpp  camera.hpp
elements/flyer/: flyer.hpp
elements/ground/: ground.cpp  ground.hpp
elements/skybox/: skybox.cpp  skybox.hpp
include/: .goutputstream-5S4W9V  BaseElement.hpp  LoadTGA2.h  Window.hpp  cpgl.hpp  glut.hpp  opencl.hpp  tools.hpp  types.hpp
lib/: CMakeLists.txt  GL_utilities.c  GL_utilities.h  loadobj.c
src/: baseelement.cpp  cpgl.cpp  glut.cpp  opencl.cpp  tools.cpp  window.cpp
